--- a/Treats/Base.lproj/Main.storyboard
+++ b/Treats/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="epu-gM-KC9">
-                                <rect key="frame" x="0.0" y="88" width="390" height="722"/>
+                                <rect key="frame" x="0.0" y="139" width="390" height="671"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VKz-d5-Cwm">
                                     <size key="itemSize" width="398" height="250"/>
@@ -37,24 +37,42 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pizza_loader" translatesAutoresizingMaskIntoConstraints="NO" id="WTn-wc-Kf1">
+                                <rect key="frame" x="175" y="402" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="4mk-oZ-03g"/>
+                                    <constraint firstAttribute="width" constant="40" id="FxC-nN-U5a"/>
+                                </constraints>
+                            </imageView>
+                            <searchBar contentMode="redraw" text="" placeholder="What are you craving?" translatesAutoresizingMaskIntoConstraints="NO" id="gBO-Z9-UCd">
+                                <rect key="frame" x="0.0" y="88" width="390" height="51"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="WTn-wc-Kf1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4Yb-Bk-b0I"/>
+                            <constraint firstItem="epu-gM-KC9" firstAttribute="top" secondItem="gBO-Z9-UCd" secondAttribute="bottom" id="4ks-WZ-8E4"/>
+                            <constraint firstItem="gBO-Z9-UCd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5Cp-JP-QHr"/>
+                            <constraint firstItem="gBO-Z9-UCd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="6ET-sL-7fd"/>
                             <constraint firstItem="epu-gM-KC9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LtX-na-hJQ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="epu-gM-KC9" secondAttribute="bottom" id="Q1d-mb-FPB"/>
+                            <constraint firstItem="gBO-Z9-UCd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="XOO-CI-d1g"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="epu-gM-KC9" secondAttribute="trailing" id="apy-TS-LKu"/>
-                            <constraint firstItem="epu-gM-KC9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tbN-g7-U2d"/>
+                            <constraint firstItem="WTn-wc-Kf1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mjI-vL-vfh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="2ho-e4-1u9"/>
                     <connections>
                         <outlet property="collectionView" destination="epu-gM-KC9" id="Xaq-Fq-0i5"/>
+                        <outlet property="searchBar" destination="gBO-Z9-UCd" id="I1i-LG-jqP"/>
+                        <outlet property="spinner" destination="WTn-wc-Kf1" id="oM6-eB-xWj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1015.9420289855074" y="53.571428571428569"/>
+            <point key="canvasLocation" x="1015.3846153846154" y="53.317535545023695"/>
         </scene>
         <!--Recipe View Controller-->
         <scene sceneID="hjw-gP-L4H">
@@ -197,7 +215,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mjl-Mh-uV1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2813.8461538461538" y="52.606635071090047"/>
+            <point key="canvasLocation" x="2780" y="53"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MfY-gN-8qA">
@@ -221,6 +239,7 @@
     <resources>
         <image name="carbs" width="512" height="512"/>
         <image name="non-veg" width="100" height="100"/>
+        <image name="pizza_loader" width="500" height="500"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
